--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ sass:
 resume_avatar:                  "false"
 resume_name:                    "Afri Schoedon"
 resume_title:                   "Something with Computers"
-resume_contact_email:
-  "afri@5chdn.co"
+resume_contact_email:           "afri@5chdn.co"
+resume_contact_telegram:        "https://telegram.me/5chdn"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -35,11 +35,12 @@ resume_section_associations:    true
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
   resume_github_url:            "https://github.com/5chdn"
-  resume_twitter_url:           "http://twitter.com/5chdn"
+  resume_twitter_url:           "https://twitter.com/5chdn"
   # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/5chdn"
   # resume_instagram_url:         "insert your Instagram URL here"
+  resume_stackexchange_url:     "https://ethereum.stackexchange.com/users/87/5chdn"
   resume_website_url:           "http://5chdn.co"
 
 # Design settings
